Fix: z-index for dropdown menu

--- a/src/styles/components/dropdown-profil.scss
+++ b/src/styles/components/dropdown-profil.scss
@@ -34,7 +34,7 @@
     position: absolute;
     top: 13px;
     right: 10px;
-    z-index: 1000;
+    z-index: 2;
     width: 5px;
     height: 5px;
     border: 2px solid #333;
